--- a/Teste1.ipynb
+++ b/Teste1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGkiVTnGxj8na2rx4zyQZ6",
+      "authorship_tag": "ABX9TyOpqljwVRRY6jPcb27RSpEw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,33 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/LucasCastrosb/Dados/blob/main/Teste1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Nova seção"
-      ],
-      "metadata": {
-        "id": "nY_Su7LOoeE6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "*texto em itálico*# Nova seção"
-      ],
-      "metadata": {
-        "id": "87ZI536ZondP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "*texto em itálico*# Nova seção"
-      ],
-      "metadata": {
-        "id": "0apKddlLooap"
-      }
     },
     {
       "cell_type": "markdown",
@@ -264,7 +237,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 35
         },
         "id": "jFPECYHppHjn",
         "outputId": "f9240771-ddc5-4778-aee4-ba6d1e036913"
@@ -285,6 +258,363 @@
           "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "teste"
+      ],
+      "metadata": {
+        "id": "SrIH4tPasq9O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9Nd8x6hetFlM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# teste 2\n"
+      ],
+      "metadata": {
+        "id": "sgzcR5PUs8eS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def soma(a,b):\n",
+        "  return (a + b)"
+      ],
+      "metadata": {
+        "id": "LBwaf8QstIMO"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(soma(10,22))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hLli2N3duURe",
+        "outputId": "dac82c62-8e53-4353-c532-0d808865f9cd"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def verificacao(a,b):\n",
+        "  if a > b:\n",
+        "    return a\n",
+        "  elif b > a:\n",
+        "    return b\n",
+        "  else:\n",
+        "    return 'Os números são iguais'"
+      ],
+      "metadata": {
+        "id": "eaTw_vE8uXmv"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "verificacao(10,10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "HKppmfBTuybh",
+        "outputId": "444e9a0d-4d97-4ba0-c5eb-3da2bb01e042"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Os números são iguais'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "verificacao(10,6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v5FdFO6ou8Zt",
+        "outputId": "89e50316-ebb2-4948-d04d-1e3be6dd5952"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def concat(a,b):\n",
+        "  return a + \" \" + b"
+      ],
+      "metadata": {
+        "id": "rS94yRbCvAfh"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "concat('Testando', 'python')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "xXMXQEh4vM4h",
+        "outputId": "7d8d775e-fe58-4e17-9cf9-6a53ec2c18da"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Testando python'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def parImpar(num):\n",
+        "  mod = num % 2\n",
+        "  if mod == 0:\n",
+        "    return 'Par'\n",
+        "  else:\n",
+        "    return 'Impar'"
+      ],
+      "metadata": {
+        "id": "ZdKRlM69vVDR"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(parImpar(5))\n",
+        "print(parImpar(10))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Bj-w4KvwBNQ",
+        "outputId": "c39b107f-db58-4e93-f683-255e7d883009"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Impar\n",
+            "Par\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero = 10\n",
+        "def potencia(numero,pot):\n",
+        "  numero = numero **pot\n",
+        "  print(numero)"
+      ],
+      "metadata": {
+        "id": "3eT7X0bCwOcC"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "potencia(numero,2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cqLL4aM_wi6P",
+        "outputId": "0176c31c-f682-4290-f517-d90d2dd7fe5c"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numero)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aJwtCtpywqPw",
+        "outputId": "5f35c82b-d92b-4e1e-c5ff-800c1947abbe"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pessoa(a):\n",
+        "  return a + \" vai a/ao\""
+      ],
+      "metadata": {
+        "id": "lA58mehqwr5_"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def lugar(b):\n",
+        "  return b + \"!!!\"\n"
+      ],
+      "metadata": {
+        "id": "Fn90PYUmxwNi"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def frase(a,b):\n",
+        "  sujeito = pessoa(a)\n",
+        "  local = lugar(b)\n",
+        "  return sujeito + ' ' + local"
+      ],
+      "metadata": {
+        "id": "VSoNt-nfyLtw"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frase('Lucas','Estância Velha')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "0xyPA_fVyWsS",
+        "outputId": "4be62165-7879-445b-9f4e-853a80dbfb2e"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Lucas vai a/ao Estância Velha!!!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bIjR7-vnyclh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
