--- a/Teste1.ipynb
+++ b/Teste1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpqljwVRRY6jPcb27RSpEw",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMLbi2yEIY6GDsdMr7BKf8c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +50,7 @@
         "id": "4YRFzozZJhhM",
         "outputId": "ce736bfb-2143-4f4b-ff95-fea9c8036c49"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +81,7 @@
         "id": "9L4a0zAgO3B1",
         "outputId": "f47e16f3-605c-4a9a-966e-08d6adf97d7f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +121,7 @@
         "outputId": "bb4c9c0d-3c1d-4928-90cf-dd1d1ce3a9ef",
         "id": "jHa9s1tePkuF"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +150,7 @@
         "id": "v5umDkHFSx4q",
         "outputId": "c6dbdf6a-6985-4967-91b4-5a914c551b42"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +181,7 @@
       "metadata": {
         "id": "NBHrskZ4bTJt"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +192,7 @@
       "metadata": {
         "id": "OKxWC1t2bXvH"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +208,7 @@
         "id": "zYageH9nb6er",
         "outputId": "1589f870-7a7c-4bfa-82d3-0ba832dda291"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +227,7 @@
       "metadata": {
         "id": "N1l9f2hXcKts"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +243,7 @@
         "id": "jFPECYHppHjn",
         "outputId": "f9240771-ddc5-4778-aee4-ba6d1e036913"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +298,7 @@
       "metadata": {
         "id": "LBwaf8QstIMO"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +313,7 @@
         "id": "hLli2N3duURe",
         "outputId": "dac82c62-8e53-4353-c532-0d808865f9cd"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +338,7 @@
       "metadata": {
         "id": "eaTw_vE8uXmv"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -353,7 +354,7 @@
         "id": "HKppmfBTuybh",
         "outputId": "444e9a0d-4d97-4ba0-c5eb-3da2bb01e042"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +383,7 @@
         "id": "v5FdFO6ou8Zt",
         "outputId": "89e50316-ebb2-4948-d04d-1e3be6dd5952"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +406,7 @@
       "metadata": {
         "id": "rS94yRbCvAfh"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +422,7 @@
         "id": "xXMXQEh4vM4h",
         "outputId": "7d8d775e-fe58-4e17-9cf9-6a53ec2c18da"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,7 +452,7 @@
       "metadata": {
         "id": "ZdKRlM69vVDR"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +468,7 @@
         "id": "1Bj-w4KvwBNQ",
         "outputId": "c39b107f-db58-4e93-f683-255e7d883009"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +491,7 @@
       "metadata": {
         "id": "3eT7X0bCwOcC"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +506,7 @@
         "id": "cqLL4aM_wi6P",
         "outputId": "0176c31c-f682-4290-f517-d90d2dd7fe5c"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +529,7 @@
         "id": "aJwtCtpywqPw",
         "outputId": "5f35c82b-d92b-4e1e-c5ff-800c1947abbe"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,7 +549,7 @@
       "metadata": {
         "id": "lA58mehqwr5_"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -560,7 +561,7 @@
       "metadata": {
         "id": "Fn90PYUmxwNi"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -574,7 +575,7 @@
       "metadata": {
         "id": "VSoNt-nfyLtw"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +591,7 @@
         "id": "0xyPA_fVyWsS",
         "outputId": "4be62165-7879-445b-9f4e-853a80dbfb2e"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -609,9 +610,210 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def maiorNum(a,b):\n",
+        "  if a > b:\n",
+        "    return a\n",
+        "  elif b > a:\n",
+        "    return b\n",
+        "  else:\n",
+        "    return a"
+      ],
+      "metadata": {
+        "id": "oWHr5AY9keUY"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "maiorNum(22,20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "54gQtnWRkvW_",
+        "outputId": "afd9836c-2d93-4c76-cc92-2ba41cce9b24"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "22"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maiorTres(a,b,c):\n",
+        "  aux = maiorNum(a,b)\n",
+        "  if aux > c:\n",
+        "    return aux\n",
+        "  else:\n",
+        "    return c"
+      ],
+      "metadata": {
+        "id": "TQtmsGeukyT_"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "maiorTres(81,80,35)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jfbx4-UslGof",
+        "outputId": "38415711-8e33-43c6-9ed6-ec36e8742224"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "81"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "linguagens = [\"inglês\", \"português\", \"romano\", \"italiano\"]"
+      ],
+      "metadata": {
+        "id": "fYwyPCYYlKLO"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mundiais = [\"Brasil\", 58,62,70,94,2002]"
+      ],
+      "metadata": {
+        "id": "5hslnc4jp1YG"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pais = mundiais[0]\n",
+        "titulo01 = mundiais[1]\n",
+        "titulo02 = mundiais[2]\n",
+        "titulo03 = mundiais[3]\n",
+        "titulo04 = mundiais[4]\n",
+        "titulo05 = mundiais[5]"
+      ],
+      "metadata": {
+        "id": "2-YeXGckqAz1"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pais)\n",
+        "print(titulo01)\n",
+        "print(titulo02)\n",
+        "print(titulo03)\n",
+        "print(titulo04)\n",
+        "print(titulo05)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mkyp9VCpq_jQ",
+        "outputId": "9d2a89ea-e296-49e2-d967-bdd0aa382580"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Brasil\n",
+            "58\n",
+            "62\n",
+            "70\n",
+            "94\n",
+            "2002\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del mundiais[1:]"
+      ],
+      "metadata": {
+        "id": "gan8zg8OrGrh"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(mundiais)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BN7_SLfBrscE",
+        "outputId": "df3d2522-dc45-46c8-930a-e68a1f25688a"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Brasil', 2014]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mundiais.append(2014)"
+      ],
+      "metadata": {
+        "id": "eHV-sym_ruF0"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "bIjR7-vnyclh"
+        "id": "C8Mb63JwrwuT"
       },
       "execution_count": null,
       "outputs": []
