--- a/Teste1.ipynb
+++ b/Teste1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMLbi2yEIY6GDsdMr7BKf8c",
+      "authorship_tag": "ABX9TyMC07jlEZJzN2tP8xOfPvYc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -811,9 +810,141 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "mundiais = [['Brasil', 58, 62, 70, 94, 2002],['Alemanha', 54, 74, 90, 2014]]"
+      ],
+      "metadata": {
+        "id": "rakDJdpiX1wc"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(mundiais[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EmaH2R13Y4h6",
+        "outputId": "f61f7bd6-e288-49a2-873a-d02b01c1e886"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Brasil', 58, 62, 70, 94, 2002]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(mundiais[0][2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZiE0C973ZB-m",
+        "outputId": "31096e85-ee11-409e-c6ab-b1f36236f0e7"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "62\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [34,65,96,85,12,35,61]\n",
+        "palavras = ['zebra', 'leao', 'macaco', 'cachorro', 'gato', 'afea']"
+      ],
+      "metadata": {
+        "id": "l6ShK0U2ZFER"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(max(numeros))\n",
+        "print(min(numeros))\n",
+        "print(max(palavras))\n",
+        "print(min(palavras))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PP2f17dHdUA9",
+        "outputId": "13cd562e-99c0-4678-abd3-11594640a417"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "96\n",
+            "12\n",
+            "zebra\n",
+            "afea\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros.sort(reverse=True)"
+      ],
+      "metadata": {
+        "id": "nOS6CDkfdX3p"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numeros)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Udv7HLKGeKcP",
+        "outputId": "14fd6662-6d22-42ef-a938-578b009b40b6"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[96, 85, 65, 61, 35, 34, 12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "C8Mb63JwrwuT"
+        "id": "SXV0CRAEe1n6"
       },
       "execution_count": null,
       "outputs": []
