--- a/Teste1.ipynb
+++ b/Teste1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGD9dZ0wZnXYLH9b/BiHrC",
+      "authorship_tag": "ABX9TyMLArPX0ANLcqJDrZrcgoLX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1551,7 +1551,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 400
+          "height": 293
         },
         "id": "ULcPu1QZei4B",
         "outputId": "019182f5-eb02-4237-9d74-4904981d34f4"
@@ -1921,9 +1921,163 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista = [30,40,50]"
+      ],
       "metadata": {
         "id": "vfi2jHYUevdc"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = len(lista)"
+      ],
+      "metadata": {
+        "id": "W7seJP_oSHVb"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = sum(lista)"
+      ],
+      "metadata": {
+        "id": "USGdnq_vSLmY"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a / b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iQmWeVKySNap",
+        "outputId": "50dc9bf0-49f7-4f7e-be25-1b0cefc45808"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "40.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calc_media(lista):\n",
+        "  tamanho =  len(lista)\n",
+        "  total = sum(lista)\n",
+        "  media = total / tamanho\n",
+        "  return media"
+      ],
+      "metadata": {
+        "id": "wEJ9tbebSvng"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import amedia  as m# Importa o arquivo media.py\n"
+      ],
+      "metadata": {
+        "id": "tOtbQ0seZlc4"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(amedia.calc_media(lista))  # Importa o arquivo media.py\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TMU7YnFXZulq",
+        "outputId": "0d58008e-40cf-4f97-fa30-262fae00632e"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = [13,5,85,64,31,85]"
+      ],
+      "metadata": {
+        "id": "p8IbNVNCbGVR"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m.calc_media(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0IwTwDiDajEO",
+        "outputId": "958a53fb-06cd-496d-ab65-35c3a74936ad"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "47.166666666666664"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "es5TjgOwbMIc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "l8DC1lo7dhL9"
       },
       "execution_count": null,
       "outputs": []
