--- a/DSAteste4.ipynb
+++ b/DSAteste4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTTOha3hl5HQSs4NILpoy8",
+      "authorship_tag": "ABX9TyMK/KdEbW4DJ5Fqy0zpv2Ub",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -740,9 +740,149 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "var1 = dict3['chave2'][0] - 2"
+      ],
       "metadata": {
         "id": "Y8Z3BkIy1IpW"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "var1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r3AIJo4-1pAa",
+        "outputId": "053e3705-24f3-4142-92ec-be471f9a1d1c"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict3['chave2'][0] -= 2"
+      ],
+      "metadata": {
+        "id": "OAh7pSGR1pYL"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict3['chave2'][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nth4W9Jg2BdM",
+        "outputId": "af45fd94-3bd6-49e4-8f7b-b52c90d66970"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dicionario aninhado\n"
+      ],
+      "metadata": {
+        "id": "PJLeGAua2TY_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_aninhado = {'key1':{'key2_aninhada':{'key3_aninhada':'Dict aninhado em Python'}}}"
+      ],
+      "metadata": {
+        "id": "91RM6Ing2WJ9"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_aninhado"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TVa_OHNL2iTB",
+        "outputId": "40574d76-5c63-499a-d26e-2386cf7b845c"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'key1': {'key2_aninhada': {'key3_aninhada': 'Dict aninhado em Python'}}}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Tuplas"
+      ],
+      "metadata": {
+        "id": "caCizTL13WkX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tupla1 = (\"Geografia\", 23, \"Elefantes\", 9.8, 'Python')"
+      ],
+      "metadata": {
+        "id": "zsN491wl3dJ-"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZnuoUjwS3nsG"
       },
       "execution_count": null,
       "outputs": []
